#838 Fix language select view on safari (adjust font size)

--- a/apihub-root/lightweight-pwa/css/main.css
+++ b/apihub-root/lightweight-pwa/css/main.css
@@ -229,10 +229,10 @@ body {
     background: #fff;
 }
 
-#leaflet-content h5,
+#leaflet-content,
 #leaflet-content .select-lang-text,
 #leaflet-content .languages-list {
-    font-size: 1.8vh;
+    font-size: calc(100% + 1vh);
 }
 
 #leaflet-content .select-lang-text {
@@ -255,7 +255,6 @@ body {
     text-align: start;
     overflow-y: auto;
     height: 100%;
-    font-size: 1.5vh;
     height: 95%;
 }
 
@@ -340,7 +339,6 @@ body {
 .leaflet-accordion-item table th {
     border: 1px solid;
     border-collapse: collapse;
-    font-size: inherit;
 }
 
 .leaflet-accordion-item td, th {
@@ -355,7 +353,6 @@ body {
     background: rgba(0, 0, 0, 0.7);
     height: 100%;
     width: 100%;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     z-index: 100;
@@ -459,6 +456,12 @@ body {
 
     #leaflet-content h5 {
         margin-right: 1rem;
+    }
+
+    .leaflet-accordion-item table,
+    .leaflet-accordion-item table td,
+    .leaflet-accordion-item table th {
+        font-size: large;
     }
 
     .leaflet-page .scan-button, .error-page .scan-button {
@@ -645,6 +648,12 @@ body {
 
     #leaflet-content h5 {
         margin-right: 4rem;
+    }
+
+    .leaflet-accordion-item table,
+    .leaflet-accordion-item table td,
+    .leaflet-accordion-item table th {
+        font-size: larger;
     }
 
     #leaflet-content .languages-list {
